# global-game-jam

./: CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
engine/include/: animation.hpp
engine/src/: animation.cpp
include/: audio.hpp  definitions.hpp  game-objects.hpp  player.hpp
include/states/: animation-demo-state.hpp  credits-state.hpp  final-state.hpp  game-state.hpp  intro-state.hpp  level-2.hpp  menu-state.hpp  pause-state.hpp  tutorial-state.hpp
resources/background/: .gitignore
resources/final/: final.txt
resources/intro/: intro.txt
src/: audio.cpp  game-objects.cpp  main.cpp  player.cpp
src/states/: animation-demo-state.cpp  credits-state.cpp  final-state.cpp  game-state.cpp  intro-state.cpp  level-2.cpp  menu-state.cpp  pause-state.cpp  tutorial-state.cpp
